--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,35 +17,61 @@ include(FetchContent)
 
 # flatbuffers
 FetchContent_Declare(
-    flatbuffers
-    GIT_REPOSITORY ${FLATBUFFERS_REPOSITORY}
-    GIT_TAG        ${FLATBUFFERS_TAG}
-)
+  flatbuffers
+  GIT_REPOSITORY ${FLATBUFFERS_REPOSITORY}
+  GIT_TAG        ${FLATBUFFERS_TAG}
+  )
 
 if(NOT FBS_FOLDER_PREFIX)
-    set(FBS_FOLDER_PREFIX "Dependencies/flatbuffers" CACHE STRING "")
+  set(FBS_FOLDER_PREFIX "Dependencies/flatbuffers" CACHE STRING "")
 endif()
-
-FetchContent_MakeAvailable(flatbuffers)
-set_target_properties(flatbuffers flatc
-    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
-set_target_properties(flathash flatsamplebfbs flatsamplebinary flatsampletext generated_code
-    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX}/Examples)
-set_target_properties(flattests generated_code
-    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX}/Tests)
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL ${CMAKE_HOST_SYSTEM_NAME})
-    # Create flat2h
-    add_executable(flat2h ${CMAKE_CURRENT_SOURCE_DIR}/src/flat2h.cpp)
-    if(FBS_FOLDER_PREFIX AND NOT ${FBS_FOLDER_PREFIX} STREQUAL "")
-        set_target_properties(flat2h
-            PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
-    endif()
-    if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-        target_compile_definitions(flat2h PRIVATE -D_CRT_SECURE_NO_WARNINGS)
-    endif()
+  set(FBS_IS_HOST_COMPILING TRUE)
 endif()
 
-set(FLATBUFFERS_CMAKE_ROOT ${CMAKE_CURRENT_SOURCE_DIR} CACHE STRING "Root of FlatBuffersCMake that will later be referenced into AddFbsTarget.cmake")
+if(FBS_IS_HOST_COMPILING)
+  set(FLATBUFFERS_BUILD_FLATC ON CACHE BOOL "Enable the build of the flatbuffers compiler")
+else()
+  set(FLATBUFFERS_BUILD_FLATC OFF CACHE BOOL "Enable the build of the flatbuffers compiler")
+endif()
+set(FLATBUFFERS_INSTALL OFF CACHE BOOL "Enable the installation of targets.")
+set(FLATBUFFERS_BUILD_TESTS OFF CACHE BOOL "Enable the installation of targets.")
+set(FLATBUFFERS_BUILD_FLATHASH OFF CACHE BOOL "Enable the build of flathash")
 
+FetchContent_MakeAvailable(flatbuffers)
+
+set_target_properties(flatbuffers
+  PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
+
+if(FLATBUFFERS_BUILD_FLATC)
+  set_target_properties(flatc
+    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
+endif()
+
+if(FLATBUFFERS_BUILD_FLATHASH)
+  set_target_properties(flathash
+    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
+endif()
+
+if(FLATBUFFERS_BUILD_TESTS)
+  set_target_properties(flatsamplebfbs flatsamplebinary flatsampletext generated_code
+    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX}/Examples)
+  set_target_properties(flattests
+    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX}/Tests)
+endif()
+
+# Create flat2h
+if(FBS_IS_HOST_COMPILING AND FLATBUFFERS_BUILD_FLATC)
+  add_executable(flat2h ${CMAKE_CURRENT_SOURCE_DIR}/src/flat2h.cpp)
+  if(FBS_FOLDER_PREFIX AND NOT ${FBS_FOLDER_PREFIX} STREQUAL "")
+    set_target_properties(flat2h
+      PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
+  endif()
+  if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+    target_compile_definitions(flat2h PRIVATE -D_CRT_SECURE_NO_WARNINGS)
+  endif()
+endif()
+
+# Include the function
 include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/AddFbsTarget.cmake)
