--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 
 project("FlatBuffersCMake" VERSION 1.0.0)
 
-set(FLATBUFFERS_REPOSITORY "https://github.com/google/flatbuffers" CACHE STRING "Repository of flatbuffers")
+set(FLATBUFFERS_REPOSITORY "https://github.com/OlivierLDff/flatbuffers" CACHE STRING "Repository of flatbuffers")
 set(FLATBUFFERS_TAG "master" CACHE STRING "Git tag/branch of flatbuffers")
 
 include(FetchContent)
