--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ FetchContent_Declare(
   flatbuffers
   GIT_REPOSITORY ${FLATBUFFERS_REPOSITORY}
   GIT_TAG        ${FLATBUFFERS_TAG}
+  GIT_SHALLOW    1
   )
 
 if(NOT FBS_FOLDER_PREFIX)
