--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,7 @@
 #
-#   Flat buffers CMake integration
-#   Base on BuildFlatBuffers.cmake from flatbuffers repo
+# Flat buffers CMake integration Base on BuildFlatBuffers.cmake from flatbuffers repo
 #
-#   Copyright Olivier Le Doeuff 2019
+# Copyright Olivier Le Doeuff 2019
 #
 
 # MakeAvailable require 3.14. FetchContent 3.11
@@ -10,13 +9,22 @@ cmake_minimum_required(VERSION 3.14 FATAL_ERROR)
 
 project("FlatBuffersDlc" VERSION 1.2.0)
 
-set(FLATBUFFERS_REPOSITORY "https://github.com/google/flatbuffers" CACHE STRING "Repository of flatbuffers")
-set(FLATBUFFERS_TAG "v2.0.0" CACHE STRING "Git tag/branch of flatbuffers")
+set(FLATBUFFERS_REPOSITORY
+    "https://github.com/google/flatbuffers"
+    CACHE STRING "Repository of flatbuffers"
+)
+set(FLATBUFFERS_TAG
+    "v2.0.0"
+    CACHE STRING "Git tag/branch of flatbuffers"
+)
 
 include(cmake/CPM.cmake)
 
 if(NOT FBS_FOLDER_PREFIX)
-  set(FBS_FOLDER_PREFIX "Dependencies/flatbuffers" CACHE STRING "")
+  set(FBS_FOLDER_PREFIX
+      "Dependencies/flatbuffers"
+      CACHE STRING ""
+  )
 endif()
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL ${CMAKE_HOST_SYSTEM_NAME})
@@ -24,19 +32,37 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL ${CMAKE_HOST_SYSTEM_NAME})
 endif()
 
 if(FBS_IS_HOST_COMPILING)
-  set(FLATBUFFERS_BUILD_FLATC ON CACHE BOOL "Enable the build of the flatbuffers compiler")
+  set(FLATBUFFERS_BUILD_FLATC
+      ON
+      CACHE BOOL "Enable the build of the flatbuffers compiler"
+  )
 else()
-  set(FLATBUFFERS_BUILD_FLATC OFF CACHE BOOL "Enable the build of the flatbuffers compiler")
+  set(FLATBUFFERS_BUILD_FLATC
+      OFF
+      CACHE BOOL "Enable the build of the flatbuffers compiler"
+  )
 endif()
-set(FLATBUFFERS_INSTALL OFF CACHE BOOL "Enable the installation of targets.")
-set(FLATBUFFERS_BUILD_TESTS OFF CACHE BOOL "Enable the installation of targets.")
-set(FLATBUFFERS_BUILD_FLATHASH OFF CACHE BOOL "Enable the build of flathash")
-set(FLATBUFFERS_ENABLE_PCH ON CACHE BOOL
-       "Enable precompile headers support for 'flatbuffers' and 'flatc'. \"
+set(FLATBUFFERS_INSTALL
+    OFF
+    CACHE BOOL "Enable the installation of targets."
+)
+set(FLATBUFFERS_BUILD_TESTS
+    OFF
+    CACHE BOOL "Enable the installation of targets."
+)
+set(FLATBUFFERS_BUILD_FLATHASH
+    OFF
+    CACHE BOOL "Enable the build of flathash"
+)
+set(FLATBUFFERS_ENABLE_PCH
+    ON
+    CACHE
+      BOOL
+      "Enable precompile headers support for 'flatbuffers' and 'flatc'. \"
         Only work if CMake support 'target_precompile_headers'. \"
         Only work if CMake supports 'target_precompile_headers'. \"
         This can speed up compilation time."
-       )
+)
 
 # flatbuffers
 CPMAddPackage(
@@ -48,20 +74,16 @@ CPMAddPackage(
 set_target_properties(flatbuffers PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
 
 if(FLATBUFFERS_BUILD_FLATC)
-  set_target_properties(flatc
-    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
+  set_target_properties(flatc PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
 endif()
 
 if(FLATBUFFERS_BUILD_FLATHASH)
-  set_target_properties(flathash
-    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
+  set_target_properties(flathash PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
 endif()
 
 if(FLATBUFFERS_BUILD_TESTS)
-  set_target_properties(flatsamplebfbs flatsamplebinary flatsampletext generated_code
-    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX}/Examples)
-  set_target_properties(flattests
-    PROPERTIES FOLDER ${FBS_FOLDER_PREFIX}/Tests)
+  set_target_properties(flatsamplebfbs flatsamplebinary flatsampletext generated_code PROPERTIES FOLDER ${FBS_FOLDER_PREFIX}/Examples)
+  set_target_properties(flattests PROPERTIES FOLDER ${FBS_FOLDER_PREFIX}/Tests)
 endif()
 
 # Create flat2h
@@ -69,8 +91,7 @@ if(FBS_IS_HOST_COMPILING AND FLATBUFFERS_BUILD_FLATC)
   add_executable(flat2h ${CMAKE_CURRENT_SOURCE_DIR}/src/flat2h.cpp)
   target_compile_features(flat2h PRIVATE cxx_std_17)
   if(FBS_FOLDER_PREFIX AND NOT ${FBS_FOLDER_PREFIX} STREQUAL "")
-    set_target_properties(flat2h
-      PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
+    set_target_properties(flat2h PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
   endif()
   if(MSVC)
     target_compile_definitions(flat2h PRIVATE -D_CRT_SECURE_NO_WARNINGS)
