🐛 support flatbuffer being imported with `find_package`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,9 +71,16 @@ CPMAddPackage(
   GIT_TAG ${FLATBUFFERS_TAG}
 )
 
+# This might happen if CPM_USE_LOCAL_PACKAGES is set to ON and flatbuffers is found in the system
+if(NOT TARGET flatbuffers and TARGET flatbuffers::flatbuffers)
+  message(STATUS "Define target flatbuffers to be an alias from flatbuffers::flatbuffers")
+  add_library(flatbuffers INTERFACE)
+  target_link_libraries(flatbuffers INTERFACE flatbuffers::flatbuffers)
+endif()
+
 set_target_properties(flatbuffers PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
 
-if(FLATBUFFERS_BUILD_FLATC)
+if(FLATBUFFERS_BUILD_FLATC and TARGET flatc)
   set_target_properties(flatc PROPERTIES FOLDER ${FBS_FOLDER_PREFIX})
 endif()
 
